# attune-ai

./: .bandit  .coverage 2  .coverage 3  .coverage.Mac.home.local.77828.XlozvElx  .coverage.Mac.home.local.82988.XvJUZQzx  .coveragerc  .docint.yml  .env.example  .gitignore  .pre-commit-config.example.yaml  .pre-commit-config.yaml  .secrets.baseline  10_OUT_OF_10_ACHIEVEMENT_REPORT.md  16_WIZARDS_COMPLETE.md  ACKNOWLEDGEMENTS.md  ACKNOWLEDGMENTS.md  ADVANCED_DEBUGGING_WIZARD_SUMMARY.md  BADGES_REMINDER.md  BATCH10_IMPLEMENTATION_SUMMARY.md  BATCH10_INDEX.md  BATCH10_TESTING_GUIDE.md  BATCH2_TEST_GENERATION_SUMMARY.md  BATCH_SUMMARY.md  BEHAVIORAL_TEST_FINAL_REPORT.md  BEHAVIORAL_TEST_STATUS.md  Based on this orchestrated-health-check .md  CHANGELOG.md  CHANGELOG.md.bak  CLAUDE_CODE_INTEGRATION_SUMMARY.md  CODE_OF_CONDUCT.md  COMMERCIAL_READINESS.md  COMPREHENSIVE_COMPLETION_PLAN.md  COMPREHENSIVE_RELEASE_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVERAGE_IMPROVEMENT_SUMMARY.md  CROSS_PLATFORM_ISSUES.md  DASHBOARD_QUICKSTART.md  DASHBOARD_TESTING.md  DAY_5_COMPLETION_SUMMARY.md  (+182 more)
.archive/: .gitignore
.attune/: costs_summary.json  coverage_history.jsonl  discovery_stats.json  health.json  history.db  project_index.json  stats.json  test_executions.jsonl  workflow_chains.yaml  workflow_runs.json
.claude/: CLAUDE-blank-backup.md  CLAUDE.md  MCP_TEST_RESULTS.md  PROJECT-CONTEXT.xml  compact-state.md  mcp.json  patterns_summary.md  python-standards.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json
.empathy/: costs.jsonl  costs_summary.json  task_routing.jsonl  workflow_runs.jsonl
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_v4.1.0.md  dependabot.yml  labeler.yml
agents/: compliance_anticipation_agent.py  compliance_db.py  (+3 more)
attune_healthcare/: README.md  plugin.py  pyproject.toml
attune_healthcare/examples/: monitoring_demo.py
attune_healthcare/tests/: test_plugin.py
(+5606 files in other folders)
