[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attune-healthcare"
version = "1.0.0"
description = "Clinical protocol monitoring plugin for the Attune AI framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
maintainers = [
    {name = "Smart-AI-Memory", email = "admin@smartaimemory.com"}
]
keywords = [
    "healthcare",
    "clinical",
    "protocol",
    "monitoring",
    "empathy",
    "patient-safety",
    "vital-signs",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Zero external dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."empathy_framework.plugins"]
healthcare = "attune_healthcare.plugin:HealthcarePlugin"

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-ai"
Documentation = "https://www.smartaimemory.com/framework-docs/"
Repository = "https://github.com/Smart-AI-Memory/attune-ai"
Issues = "https://github.com/Smart-AI-Memory/attune-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["attune_healthcare*"]

[tool.setuptools.package-data]
"attune_healthcare" = ["protocols/*.json"]
